[package]
name = "drift-arbitrage"
version = "0.1.0"
description = "Flash loan arbitrage on Drift Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "drift_arbitrage"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.16.0"
drift = { version = "2.0", features = ["cpi"] }

[dev-dependencies]
solana-program-test = "~1.16.0"
tokio = { version = "1.0", features = ["macros"] }